--- a/src/main/resources/webroot/static/index.html
+++ b/src/main/resources/webroot/static/index.html
@@ -12,5 +12,8 @@ and open the template in the editor.
     </head>
     <body>
         <div>Minum sasa</div>
+        <img src="" width="300px">
+        
     </body>
+    
 </html>
