add file handler. when file click it will be request source file

--- a/resources/consoleArduino.html
+++ b/resources/consoleArduino.html
@@ -162,39 +162,31 @@
         </div>
         <div class="grid condensed " >
             <div class="row cells12 bg-grayLighter" >
-                <div class="cell  colspan2" style="padding-left: 20px">
+                <div class="cell  colspan2" style="padding-left: 30px;padding-top: 10px">
                     <div class="treeview" data-role="treeview" >
                         <ul id="projectBar">
-                            <li class="node" >
-                                <span class="leaf"><span class="mif-folder"></span> Network</span>
-                                <span class="node-toggle"></span>
-                                <ul>
-                                    <li><span class="leaf"><span class="icon mif-file-text"></span> Lampu.h</span></li>
-                                    <li><span class="leaf"><span class="icon mif-file-code"></span> BARACUDA</span></li>
-                                    <li><span class="leaf"><span class="icon mif-file-code"></span> EPSON</span></li>
-                                    <li><span class="leaf"><span class="icon mif-file-code"></span> VUSOLO</span></li>
-                                    <li><span class="leaf"><span class="icon mif-file-code"></span> GALAXY S4</span></li>
-                                </ul>
-                            </li>
-                            <li class="node" ><span class="leaf"><span class="mif-folder"></span> Network</span><span class="node-toggle"></span><ul></ul></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="cell  colspan10 ">
                     <div class="tabcontrol2 "  data-role="tabcontrol" data-open-target="#frame_5_1" >
-                        <ul class="tabs">
+                        <ul class="tabs" id="tabCode">
                             <li><a href="#frame_5_1">Code</a><span style="margin-top:  -6px;margin-left: -17px; color: #eaeaea" class="on-left mif-cancel fg-hover-yellow "></span></li>
-                            <li><a href="#frame_5_2">Visual asdsad</a><span style="margin-top:  -6px;margin-left: -17px; color: #eaeaea" class="on-left mif-cancel fg-hover-yellow "></span></li>
+                            <li><a href="#frame_5_2">Minum</a><span style="margin-top:  -6px;margin-left: -17px; color: #eaeaea" class="on-left mif-cancel fg-hover-yellow "></span></li>
+                            <li><a href="#frame_5_2">Makan</a><span style="margin-top:  -6px;margin-left: -17px; color: #eaeaea" class="on-left mif-cancel fg-hover-yellow "></span></li>
                         </ul>
 
-                        <div class="frames bordered" >
+                        <div class="frames bordered" id="tabSource" >
                             <div class="frame" id="frame_5_2" style="margin-top: 0px;padding: 0px">
                                 <iframe  frameborder="1" width="100%" height="555" src="editor/editor2.html"></iframe>
                             </div>
                             <div class="frame" id="frame_5_1" style="margin-top: 0px;padding: 0px">
                                 <iframe  frameborder="1" width="100%" height="555" src="editor/editor2.html"></iframe>                                             
                             </div>
-
+                            <div class="frame" id="frame_5_2" style="margin-top: 0px;padding: 0px">
+                                
+                            </div>
                         </div>                                    
                     </div>
                 </div>
