add to access file from API

--- a/resources/editor/editor2.html
+++ b/resources/editor/editor2.html
@@ -86,10 +86,13 @@
 
             });
 
-            
+
 
             function  getvalueEditor() {
                 return editor.getValue();
+            }
+            function  setValueEditor(value) {
+                return editor.setValue(value);
             }
 
 //            console.log(editor.getValue());
