--- a/resources/editor/editor_1.html
+++ b/resources/editor/editor_1.html
@@ -22,7 +22,7 @@
     <body>
 
         <pre id="editor">/*
-          Blink
+          hahhhahshh bliaksnfasdf
           Turns on an LED on for one second, then off for one second, repeatedly.
 
           Most Arduinos have an on-board LED you can control. On the Uno and
