--- a/resources/editor/editor2.html
+++ b/resources/editor/editor2.html
@@ -92,7 +92,7 @@
                 return editor.getValue();
             }
             function  setValueEditor(value) {
-                return editor.setValue(value);
+                editor.setValue(value);
             }
 
 //            console.log(editor.getValue());
