--- a/resources/exampleScript/FileTest.html
+++ b/resources/exampleScript/FileTest.html
@@ -13,8 +13,8 @@ and open the template in the editor.
         <script src="Loader.js"></script>
     </head>
     <body>
-        <div class="mm" id="mini" >TODO write content</div>
+<!--        <div class="mm" id="mini" >TODO write content</div>
         <div class="mm" id="mini2" >TODO write content</div>
-        <div class="mm" id="mini3" >TODO write content</div>
+        <div class="mm" id="mini3" >TODO write content</div>-->
     </body>
 </html>
