finish method to store file :)

--- a/resources/consoleArduinoV3.html
+++ b/resources/consoleArduinoV3.html
@@ -113,6 +113,14 @@
                                     <option>Atmega 32u 5v</option>
                                 </select>
                             </div><br><br>
+                            <label class="fg-black">Visibility</label><br>
+                            <div class="input-control select">
+                                <select>
+                                    <option>Private</option>
+                                    <option>Public</option>
+                                    <option>Friend</option>
+                                </select>
+                            </div><br><br>
                             <label class="fg-black">Detail</label><br>
                             <div class="input-control textarea" style="width:193px">
                                 <textarea placeholder="Detail..." cols="50" ></textarea>
@@ -185,7 +193,7 @@
                     <div class="tab-panel-group">
                         <div class="tab-group-content">
 
-                            <button class="fluent-big-button " style="width: 70px">
+                            <button id="saveProject" class="fluent-big-button " style="width: 70px">
                                 <span class="icon mif-sd-card" ></span>
                                 <span class="label">Save</span>
                             </button>
